[project]
name = "pressuresensor"
version = "0.1.0"
description = ""
authors = [
    {name = "Billie"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pymodbus (>=3.11.3,<4.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "serial (>=0.0.97,<0.0.98)",
    "pyserial (>=3.5,<4.0)",
    "propar (>=1.0.3,<2.0.0)",
    "bronkhorst-propar (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
